creusot/tests/should_fail/bug/subregion.coma

module Subregion_ListReversalH
  use prelude.Intrinsic
  use prelude.UIntSize
  use prelude.Int
  let rec list_reversal_h (l:usize) (return'  (ret:usize))= (! bb0 
    [ bb0 = [ &r <- [#"../subregion.rs" 4 16 4 17] (0 : usize) ] bb1
    | bb1 = bb1 
      [ bb1 = {[#"../subregion.rs" 5 16 5 20] true}
        (! bb2) 
        [ bb2 = UIntSize.ne {l} {[#"../subregion.rs" 6 15 6 16] (0 : usize)} (fun (_ret':bool) -> [ &_7 <- _ret' ] (any 
            [ br0 -> {_7 = false} (! bb4) | br1 -> {_7} (! bb3) ]
            ))
        | bb3 = {[@expl:assertion] [#"../subregion.rs" 7 22 7 27] false}
          [ &x <- r ] [ &tmp <- l ] [ &r <- tmp ] bb1 ]
         ]
      
    | bb4 = [ &_0 <- r ] return' {_0} ]
    )
    [ & _0 : usize = any_l () : usize
    | & l : usize = l
    | & r : usize = any_l () : usize
    | & _7 : bool = any_l () : bool
    | & x : usize = any_l () : usize
    | & tmp : usize = any_l () : usize ]
     [ return' (result:usize)-> (! return' {result}) ] 
end
